<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ETHERNET_demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_on">On</string>
    <string name="str_off">Off</string>
    <string name="str_interface">interface</string>
    <string name="str_dest">dest</string>
    <string name="str_len">prefix len</string>
    <string name="str_gateway">gateway</string>
    <string name="str_dns">dns</string>
    <string name="str_ok">ok</string>
    <string name="str_set_eth0_dhcp">set eth0 DHCP</string>
    <string name="str_set_eth1_dhcp">set eth1 DHCP</string>
    <string name="str_ifconfig">ifconfig</string>
    <string name="str_route">route</string>
    <string name="str_ip">ip</string>
    <string name="str_add_rtb">addrtb</string>
    <string name="str_rm_rtb">rm rtb</string>
    <string name="str_set_eth0">set eth0</string>
    <string name="str_set_eth1">set eth1</string>
    <string name="str_eth0">eth0</string>
    <string name="str_eth1">eth1</string>
    <string name="str_eth0_use_proxy">eth0 use proxy</string>
    <string name="str_eth1_use_proxy">eth1 use proxy</string>
    <string name="str_host_name">host name</string>
    <string name="str_port">port</string>
    <string name="str_bypass_for">bypass for</string>
</resources>
